[gd_scene load_steps=2 format=2]

[ext_resource path="res://Control.gd" type="Script" id=1]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Control" type="Control" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -114.0
margin_top = -39.0
margin_right = 244.0
margin_bottom = 1.0

[node name="Output_file" type="Label" parent="Control"]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -222.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create" type="Button" parent="Control"]
anchor_bottom = 1.0
margin_left = 1.0
margin_top = 42.0
margin_right = 136.0
margin_bottom = 42.0
text = "Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="create2" type="Button" parent="Control"]
anchor_bottom = 1.0
margin_right = 135.0
disabled = true
text = "Execute"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Control/create" to="." method="_on_create_pressed"]
[connection signal="pressed" from="Control/create2" to="." method="_on_create2_pressed"]
